--- a/ZhiXingWeb/Content/Site.css
+++ b/ZhiXingWeb/Content/Site.css
@@ -1,8 +1,8 @@
 ﻿body {
-    font-size: .85em;
-    font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;
+    font-size: .85em; 
     color: #232323;
-    background-color: #fff;
+    background-color: #f22333;
+    font-family: "微软雅黑",Arial,"宋体",sans-serif; 
 }
 
 header, footer, nav, section {
@@ -58,4 +58,10 @@ textarea {
 
 .validation-summary-valid {
     display: none;
+}
+
+
+ody, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, input, textarea, p, blockquote, th, td {
+  padding: 0;
+  margin: 0;
 }
