--- a/ZhiXingWeb/Views/Administrator/Image.cshtml
+++ b/ZhiXingWeb/Views/Administrator/Image.cshtml
@@ -4,12 +4,20 @@
 }
 
 @section Scripts{
+    <script src="~/Scripts/plupload/plupload.full.min.js"></script>
     <script src="~/Scripts/administrator/image.js"></script>
+  
 }  
+<style>
+    .progress {
+        height: 4px;
+        font-size: 0;
+        line-height: 4px;
+        background: orange;
+        width: 0;
+    }
+ </style>
 
-<div style="margin-bottom:10px;margin-top:10px;padding-left:10px;">
-    <button class="btn btn-default" data-toggle="modal" data-target="#categoryModal">新增分类</button>
-</div>
 
 <table id="example" class="display" cellspacing="0" width="100%">
     <thead>
@@ -21,3 +29,13 @@
     </thead>
     <tbody></tbody>
 </table>
+<div style="margin-bottom:10px;margin-top:10px;padding-left:10px;padding-top:10px;border-top:2px solid #428bca;">
+    <div>
+        <label>分类</label><select name="upload-category" data-bind="options: categorys, optionsText:'Name', optionsValue:'Id', value: uploadSeletedCategory"></select>
+    </div>
+    <div>
+        <button class="btn btn-default" data-toggle="modal" data-target="#categoryModal" id="loadImage">选择图片(最大2M)</button>
+        <button class="btn btn-default" data-toggle="modal" data-target="#categoryModal" id="start_upload">开始上传</button>
+    </div> 
+</div> 
+<div id="file-list"></div> 
