--- a/ZhiXingWeb/Views/Home/Design.cshtml
+++ b/ZhiXingWeb/Views/Home/Design.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@section scripts{ 
+@section scripts{   
     <script src="~/Scripts/zhixing/design.js"></script> 
 }
 
@@ -23,11 +23,11 @@
 
     <ul style="margin-right: 0px; position: absolute; left: 903px; top: 0px;" class="shaiBox" data-bind="template:{ name: 'design-template', foreach: ul4 }"></ul> 
 
-</div>
+</div> 
 
 <script type="text/html" id="design-template">
     <li class="x1" style="padding-top:10px;padding-bottom:10px;">
-        <a href="#" class="border" target="_blank" style="margin-left:11px;"><img data-bind="attr:{src:ImageURL}" width="275"></a>
+        <a href="#" class="border" target="_blank" style="margin-left:11px;"><img data-bind="attr:{src:ImageURL}" width="275"/></a>
         <a href="#" style="text-decoration:none;">
             <p class="index_list_p3" style="padding-left:11px;padding-right:11px;" data-bind="text: Description">
 
