--- a/ZhiXingWeb/Content/administrator/layout.css
+++ b/ZhiXingWeb/Content/administrator/layout.css
@@ -166,3 +166,40 @@ h6, .h6 {
   margin-bottom: 0;
 }
 
+.admin-login {
+    position:absolute;
+    top:50%;
+    left:50%;
+    width:400px;
+    height:200px;
+    margin-top:-100px;
+    margin-left:-200px;
+     
+    line-height:30px;
+    font-size:16px;
+    text-align:center;
+}
+
+.admin-login table {
+    margin-left:auto;
+    margin-right:auto;
+}
+
+.admin-login .message {
+    color:red;
+    margin-left:10px;
+    font-size:12px;
+}
+
+.admin-login button {
+    border:none;
+    background-color:lightgray;
+    height:25px;
+    width:50px;
+    cursor:pointer;
+}
+
+.admin-login button:hover {
+    background-color:gray;
+    color:white;
+}
