--- a/ZhiXingWeb/Content/layout.css
+++ b/ZhiXingWeb/Content/layout.css
@@ -85,3 +85,20 @@
     font-size: 12px !important;
     margin-right: 20px !important;
 }
+
+.zx-login {
+    position:absolute;
+    top:0;
+    right:0;
+    top:10px;
+}
+
+.zx-login a {
+    font-size:12px;
+    color:black;
+    text-decoration:none;
+}
+
+.zx-login a:hover {
+    color:white;
+}
